--- a/style.css
+++ b/style.css
@@ -1,15 +1,20 @@
 body{
-  background-color: black;
+background-image: linear-gradient(top, #303030 0%, #282828 50%, #282828 100%);
+background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #303030), color-stop(0.5, #282828), color-stop(1, #282828));
+background-image: -moz-linear-gradient(top, #303030 0%, #282828 50%, #282828 100%);
+background-image: -o-linear-gradient(top, #303030 0%, #282828 50%, #282828 100%);
+background-image: -ms-linear-gradient(top, #303030 0%, #282828 50%, #282828 100%);
+  
   margin: 10% 20%;
 }
 
 h1 {
-  color: orange;
+  color: #b1200f;
   font-size: 24px;
   font-family: Arial, Helvetica, sans-serif;
 }
 h2 {
-  color: orange;
+  color: #e5db82;
   font-weight: bold;
   font-size: 18px;
   font-family: Arial, Helvetica, sans-serif;
@@ -17,28 +22,28 @@ h2 {
 h3 {
   font-size: 14px;
   font-weight: bold;
-  color: green;
+  color: #bb6622;
   font-family: Arial, Helvetica, sans-serif;
 }
 h4 {
   font-size: 14px;
-  color: green;
+  color: #bb9944;
   font-family: Arial, Helvetica, sans-serif;
 }
 h5 {
   font-size: 14px;
-  color: green;
+  color: #768766;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 p {
   font-size: 14px;
-  color: green;
+  color: #768766;
   font-family: Arial, Helvetica, sans-serif;
 }
 ul {
   font-size: 14px;
-  color: green;
+  color: #768766;
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -56,5 +61,9 @@ img {
   color: white;
   padding-left: 10px;
   padding-right: 10px;
-  background-color:green
+  background-color:#b1200f
 }
+
+
+
+
