--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ h2 {
   font-family: Arial, Helvetica, sans-serif;
 }
 h3 {
+  padding-left: 10px;
   border-top: solid;
   border-bottom: solid;
   font-size: 14px;
@@ -41,7 +42,7 @@ h3 {
 }
 h4 {
   font-size: 14px;
-  color: #bb9944;
+  color: #e5db82;
   font-family: Arial, Helvetica, sans-serif;
 }
 h5 {
