--- a/style.css
+++ b/style.css
@@ -1,71 +1,84 @@
 body{
-background-image: linear-gradient(top, #303030 0%, #282828 50%, #282828 100%);
-background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #303030), color-stop(0.5, #282828), color-stop(1, #282828));
-background-image: -moz-linear-gradient(top, #303030 0%, #282828 50%, #282828 100%);
-background-image: -o-linear-gradient(top, #303030 0%, #282828 50%, #282828 100%);
-background-image: -ms-linear-gradient(top, #303030 0%, #282828 50%, #282828 100%);
+background-image: linear-gradient(top, #fcb798 0%, #fedf9c 50%, #fedf9c 100%);
+background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #fcb798), color-stop(0.5, #fedf9c), color-stop(1, #fedf9c));
+background-image: -moz-linear-gradient(top, #fcb798 0%, #fedf9c 50%, #fedf9c 100%);
+background-image: -o-linear-gradient(top, #fcb798 0%, #fedf9c 50%, #fedf9c 100%);
+background-image: -ms-linear-gradient(top, #fcb798 0%, #fedf9c 50%, #fedf9c 100%);
   
   margin: 10% 20%;
 }
 
+.resume {
+  background-color: #03c383;
+}
+
 .header {
-  border-style: double;
-  padding-left: 10px;
-  padding-right: 10px;
-  background-color:#00507d;
-  color: #d3fad3;
+  background-color:#710162;
+  color: #ffffd9;
+  font-family: Garamond, Arial, sans-serif;
 }
 
 h1 {
-  color: #d3fad3;
-  font-size: 24px;
-  font-family: Arial, Helvetica, sans-serif;
+  padding-left: 10px;
+  padding-right: 10px;
+  color: #ffffd9;
+  font-size: 30px;
+  font-family: Garamond, Arial, sans-serif;
 }
 
 h2 {
+  padding-top: 3px;
   padding-left: 10px;
-
-  background-color: #00507d;
-  color: #d3fad3;
+  text-transform: uppercase;
+  background-color: #a12a5e;
+  color: #ffffd9;
   font-weight: bold;
   font-size: 18px;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 h3 {
-  border-top: solid;
+  padding-top: 3px;
+  padding-left: 10px;
+  padding-right: 10px;
+
   font-size: 14px;
-  font-weight: bold;
-  color: #acf5a8;
+  color: #ffffd9;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 h4 {
+  padding-left: 20px;
+  padding-right: 10px;
   font-size: 14px;
-  color: #e5db82;
+  color: #ffffd9;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 h5 {
+  padding-left: 20px;
+  padding-right: 10px;
   font-size: 14px;
-  color: #0096c8;
+  color: #ffffd9;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 p {
+  padding-left: 10px;
+  padding-right: 10px;
   font-size: 14px;
-  color: #0096c8;
+  color: #ffffd9;
   font-family: Arial, Helvetica, sans-serif;
 }
 ul {
   font-size: 14px;
-  color:  #0096c8;
+  color:  #ffffd9;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 img {
   
-  width: 400px;
+  width: 323px;
 }
 
 .gif {
@@ -74,10 +87,10 @@ img {
 
 .footer {
 
-  color: white;
+  color: #ffffd9;
   padding-left: 10px;
   padding-right: 10px;
-  background-color:#00507d
+  background-color:#710162
 }
 
 
